Fix rampant line-spacing on lis

--- a/src/styles/setup.styl
+++ b/src/styles/setup.styl
@@ -113,9 +113,6 @@ a {
       ff-body();
       list-style: disc;
       margin-left: $hspacing*3;
-      li {
-        margin-bottom: $vspacing;
-      }
     }
     .two-columns-uneven {
       cf();
